Update videos file html5.

--- a/about.html
+++ b/about.html
@@ -6,18 +6,10 @@ background: '/img/bg-about.jpg'
 ---
 
 <p> Vídeo institucional Vixphy </p>
-<video width="320" height="240" controls>
-    <source src="https://youtu.be/cSmSzvLr1Cw" type="video/mp4">
-</video>
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/cSmSzvLr1Cw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <p> Demonstração da funcionalidade Autoscaling no OpenStack. </p>
-<video width="320" height="240" controls>
-    <source src="https://youtu.be/7FbDOr0_IvQ" type="video/mp4">
-</video>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/7FbDOr0_IvQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <p> Demonstração da Funcionalidade SFC no OpenStack. </p>
-<video width="320" height="240" controls>
-    <source src="https://youtu.be/h-e7N0UN7QM" type="video/mp4">
-</video>
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/h-e7N0UN7QM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
