--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: Contact Me
-description: Have questions? I have answers.
+title: Entre em contato!
+description: Entre em contato com a Vixphy.
 background: '/img/bg-contact.jpg'
 form: true
 ---
 
-<p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
+<p>Para entrar em contato com a Vixphy, preencha o formulário abaixo!</p>
 <form name="sentMessage" id="contactForm" novalidate>
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
@@ -39,6 +39,6 @@ form: true
   <br>
   <div id="success"></div>
   <div class="form-group">
-    <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
+    <button type="submit" class="btn btn-primary" id="sendMessageButton">Enviar</button>
   </div>
 </form>
