--- a/contact.html
+++ b/contact.html
@@ -11,21 +11,21 @@ form: true
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
       <label>Name</label>
-      <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
+      <input type="text" class="form-control" placeholder="Name" id="Nome" required data-validation-required-message="Por favor, digite seu nome.">
       <p class="help-block text-danger"></p>
     </div>
   </div>
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
       <label>Email Address</label>
-      <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
+      <input type="email" class="form-control" placeholder="Endereço de e-mail" id="email" required data-validation-required-message="Por favor, digite seu endereço de e-mail.">
       <p class="help-block text-danger"></p>
     </div>
   </div>
   <div class="control-group">
     <div class="form-group col-xs-12 floating-label-form-group controls">
       <label>Phone Number</label>
-      <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
+      <input type="tel" class="form-control" placeholder="Número de telefone" id="phone" required data-validation-required-message="Por favor, digite seu número de telefone.">
       <p class="help-block text-danger"></p>
     </div>
   </div>
