--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@ form: true
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
       <label>Name</label>
-      <input type="text" class="form-control" placeholder="Name" id="Nome" required data-validation-required-message="Por favor, digite seu nome.">
+      <input type="text" class="form-control" placeholder="Nome completo" id="Nome" required data-validation-required-message="Por favor, digite seu nome.">
       <p class="help-block text-danger"></p>
     </div>
   </div>
@@ -26,6 +26,13 @@ form: true
     <div class="form-group col-xs-12 floating-label-form-group controls">
       <label>Phone Number</label>
       <input type="tel" class="form-control" placeholder="Número de telefone" id="phone" required data-validation-required-message="Por favor, digite seu número de telefone.">
+      <p class="help-block text-danger"></p>
+    </div>
+  </div>
+  <div class="control-group">
+    <div class="form-group floating-label-form-group controls">
+      <label>Message</label>
+      <textarea rows="5" class="form-control" placeholder="Cargo e empresa" id="message" required data-validation-required-message="Please enter a message."></textarea>
       <p class="help-block text-danger"></p>
     </div>
   </div>
