Update test file archive html contact

--- a/contact.html
+++ b/contact.html
@@ -30,16 +30,16 @@ form: true
     </div>
   </div>
   <div class="control-group">
-    <div class="form-group floating-label-form-group controls">
-      <label>Message</label>
-      <textarea rows="5" class="form-control" placeholder="Cargo e empresa" id="message" required data-validation-required-message="Please enter a message."></textarea>
+    <div class="form-group col-xs-12 floating-label-form-group controls">
+      <label>Cargo e empresa</label>
+      <input type="tel" class="form-control" placeholder="" id="CargoEmpresa" required data-validation-required-message="Por favor, digite seu cargo e empresa.">
       <p class="help-block text-danger"></p>
     </div>
   </div>
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
       <label>Message</label>
-      <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+      <textarea rows="5" class="form-control" placeholder="Comentário ou Mensagem" id="message" required data-validation-required-message="Por favor, digite sua mensagem."></textarea>
       <p class="help-block text-danger"></p>
     </div>
   </div>
