Uodate file, update archive contact.html forms.

--- a/contact.html
+++ b/contact.html
@@ -31,8 +31,8 @@ form: true
   </div>
   <div class="control-group">
     <div class="form-group col-xs-12 floating-label-form-group controls">
-      <label>Cargo e empresa</label>
-      <input type="tel" class="form-control" placeholder="" id="CargoEmpresa" required data-validation-required-message="Por favor, digite seu cargo e empresa.">
+      <label>CargoEmpresa</label>
+      <input type="tel" class="form-control" placeholder="Cargo e empresa" id="CargoEmpresa" required data-validation-required-message="Por favor, digite seu cargo e empresa.">
       <p class="help-block text-danger"></p>
     </div>
   </div>
