Update button in form, contact,html

--- a/contact.html
+++ b/contact.html
@@ -48,4 +48,7 @@ form: true
   <div class="form-group">
     <button type="submit" class="btn btn-primary" id="sendMessageButton">Enviar</button>
   </div>
+  <div class="form-group">
+    <button type="reset" class="btn btn-primary" id="resetMessageButton">Cancelar</button>
+  </div>
 </form>
