--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Galeria
-description: Videos institucionais.
+description: Vídeos institucionais.
 background: '/img/bg-about.jpg'
 ---
 
