Update about and .

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ description: Vídeos institucionais.
 background: '/img/bg-about.jpg'
 ---
 
-<p> Vídeo institucional Vixphy </p>
+<p> Vídeo institucional Vixphy. </p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/cSmSzvLr1Cw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <p> Demonstração da funcionalidade Autoscaling no OpenStack. </p>
