Update contact from.

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,13 @@
 ---
 layout: page
 title: Entre em contato!
-description: Entre em contato com a Vixphy.
+description: Entre em contato com a Vixphy. 
+
+Endereço: Avenida Fernando Ferrari, 845, Goiabeira, Vitória – ES, 29075-910.
+
+Email: contato@vixphy.com.br
+
+Telefone: (27) 98161-4030
 background: '/img/bg-contact.jpg'
 form: true
 ---
