--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,10 @@ form: true
     <button type="reset" class="btn btn-primary" id="resetMessageButton">Cancelar</button>
   </div>
 </form>
-<p> Endereço: Avenida Fernando Ferrari, 845, Goiabeira, Vitória – ES, 29075-910 </p>
-<p> Email: contato@vixphy.com.br </p>
-<p> Telefone: (27) 98161-4030  </p>
 
+<div class="maisinformacoes">
+  <H3> Mais informações </H3>
+  <p> Endereço: Avenida Fernando Ferrari, 845, Goiabeira, Vitória – ES, 29075-910 </p>
+  <p> Email: contato@vixphy.com.br </p>
+  <p> Telefone: (27) 98161-4030  </p>
+</div>
