--- a/_posts/2022-08-30-plataforma.html
+++ b/_posts/2022-08-30-plataforma.html
@@ -8,12 +8,12 @@ background: '/img/posts/06.jpg'
 
 <p>A plataforma de nuvem desenvolvida pela Vixphy é baseada em código aberto. Isto permite recursos ilimitados de customização e modularidade, sem o pagamento de licenças.</p>
 
-<h2 class="section-heading">Como funciona _</h2>
+<h2 class="section-heading">Como funciona</h2>
 
 <p>  A plataforma de nuvem Vixphy cria um ambiente virtual estável e seguro para os serviços de computação, rede e armazenamento para os seus dados. Além disto, a nuvem Vixphy permite integração total com as nuvens públicas, garantindo recursos extras de redundância e flexibilidade. </p>
 <p>  Nossa solução de conectividade SD-WAN se integra perfeitamente a qualquer ambiente de nuvem, garantindo sempre o melhor desempenho, independentemente da tecnologia de acesso. Recursos como redundância de links e agregação de banda também fazem parte da nossa SD-WAN. </p>
 
-<h2 class="section-heading">Nossa Plataforma _</h2>
+<h2 class="section-heading">Nossa Plataforma</h2>
 
 <ul>
     <li>A operação da Nuvem Vixphy é muito simples e totalmente integrada, podendo ser executada de forma gráfica e centralizada a partir da gerência web.</li>
@@ -26,6 +26,6 @@ background: '/img/posts/06.jpg'
 
 
 
-<h2 class="section-heading">Por que nos contratar _</h2>
+<h2 class="section-heading">Por que nos contratar</h2>
 
 <p> Somos uma empresa Capixaba, localizada dentro do Campus Universitário da UFES em Goiabeiras. A proximidade com o ambiente acadêmico do Centro de Tecnologia da UFES nos proporciona um ambiente inovador que facilita a evolução dos nossos produtos. Além de sermos especializados em desenvolvimento, temos especialistas com vasta experiência no mercado de telecom e TI, que entendem e traduzem as dificuldades do mercado para nossos laboratórios. </p>
