--- a/_posts/2022-08-30-sdwan.html
+++ b/_posts/2022-08-30-sdwan.html
@@ -8,7 +8,7 @@ background: '/img/posts/06.jpg'
 
 <p>A SD-WAN Vixphy abstrai a camada de transporte de dados, orquestrando recursos para garantir sempre o melhor roteamento, independente da tecnologia: banda larga, MPLS ou 4G. A qualidade aumenta e os custos diminuem.</p>
 
-<h2 class="section-heading">Razões para migrar_</h2>
+<h2 class="section-heading">Razões para migrar</h2>
 
 <h3>A WAN tradicional</h3>
 <p>As tecnologias tradicionais de interconexão WAN são caras e possuem recursos limitados de redundância e qualidade de serviços.</p>
@@ -19,7 +19,7 @@ background: '/img/posts/06.jpg'
 <h3>Os desafios da TI hoje</h3>
 <p>A constante pressão por redução de custos e melhoria de qualidade empurram os gerentes de TI a levarem seus dados para a nuvem. Entretanto, aplicações sensíveis a latência podem perder muito em desempenho nestes ambientes. Mesclar a utilização de nuvens privadas e públicas é a melhor solução na maioria dos casos, além de proporcionar soluções customizadas de conectividade e segurança.</p>
 
-<h2 class="section-heading">Benefícios_</h2>
+<h2 class="section-heading">Benefícios</h2>
 
 <h3>Melhor experiência de aplicação</h3>
 <ul>
