--- a/_posts/2022-08-30-plataforma.html
+++ b/_posts/2022-08-30-plataforma.html
@@ -3,7 +3,7 @@ layout: post
 title: "Plataforma de Nuvem"
 subtitle: "A melhor forma de alavancar a  sua transformação digital"
 date: 2022-08-30 17:00:00 -0300
-background: '/img/posts/06.jpg'
+background: '/img/bg-clear.jpg'
 ---
 
 <p>A plataforma de nuvem desenvolvida pela Vixphy é baseada em código aberto. Isto permite recursos ilimitados de customização e modularidade, sem o pagamento de licenças.</p>
