--- a/_posts/2022-08-30-sdwan.html
+++ b/_posts/2022-08-30-sdwan.html
@@ -3,7 +3,7 @@ layout: post
 title: "SD-WAN"
 subtitle: "Sua conectividade na nuvem de alta performance e baixo custo."
 date: 2022-08-30 17:00:00 -0300
-background: '/img/posts/06.jpg'
+background: '/img/bg-clear.jpg'
 ---
 
 <p>A SD-WAN Vixphy abstrai a camada de transporte de dados, orquestrando recursos para garantir sempre o melhor roteamento, independente da tecnologia: banda larga, MPLS ou 4G. A qualidade aumenta e os custos diminuem.</p>
