--- a/_posts/2022-08-30-contratarrazoes.html
+++ b/_posts/2022-08-30-contratarrazoes.html
@@ -3,7 +3,7 @@ layout: post
 title: "Razões para escolher a vixphy"
 subtitle: ""
 date: 2022-08-30 17:00:00 -0300
-background: '/img/posts/06.jpg'
+background: '/img/bg-clear.jpg'
 ---
 
 <h2 class="section-heading">Tudo em código aberto</h2>
