--- a/about.html
+++ b/about.html
@@ -13,3 +13,6 @@ background: '/img/bg-clear.jpg'
 
 <p> Demonstração da Funcionalidade SFC no OpenStack: </p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/h-e7N0UN7QM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>Participação no Fórum RNP 2022 "Cibersegurança e Privacidade"</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Nvqa5Nz59gk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
